--- a/normalSphereSelection/NormalSphereSelectionDialog.ui
+++ b/normalSphereSelection/NormalSphereSelectionDialog.ui
@@ -20,6 +20,9 @@
    <item>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
+      <widget class="QComboBox" name="colorMap_comboBox"/>
+     </item>
+     <item>
       <widget class="QDialogButtonBox" name="buttonBox">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
