- aspect ratio corrected for rendering - enabled selection radius (in pixels) - added deselection - minor fixes

--- a/shaders/shaders.qrc
+++ b/shaders/shaders.qrc
@@ -61,8 +61,8 @@
         <file>vertex_pin.vert</file>
         <file>pointcloud/pointcloud.geom</file>
         <file>pointcloud/pointcloud.frag</file>
-        <file>normalSphere/normalData.frag</file>
-        <file>normalSphere/normalData.vert</file>
+        <file>normalSphere/SelectionRadius.frag</file>
+        <file>normalSphere/SelectionRadius.vert</file>
         <file>normalSphere/ScreenQuadSphere.frag</file>
         <file>normalSphere/ScreenQuadSphere.vert</file>
         <file>normalSphere/IcoshphereShader.vert</file>
