--- a/forms/mainWin.ui
+++ b/forms/mainWin.ui
@@ -133,6 +133,7 @@
     <addaction name="actionExportPlaneIntersectSVG"/>
     <addaction name="actionExportFaceNormalAngles"/>
     <addaction name="menuExport_Polylines"/>
+    <addaction name="actionExport_Normal_Sphere_Data"/>
     <addaction name="separator"/>
     <addaction name="menuExportScreenshots"/>
     <addaction name="menuExport_Screenshots_Parse_Directory"/>
@@ -953,7 +954,7 @@
   </action>
   <action name="actionImportTexMap">
    <property name="text">
-    <string> Import &amp;Color (per Vertex)</string>
+    <string>Import &amp;Color (per Vertex)</string>
    </property>
   </action>
   <action name="actionFileSaveAs">
@@ -4301,6 +4302,11 @@ p, li { white-space: pre-wrap; }
   <action name="actionVertices_Normal_Sphere">
    <property name="text">
     <string>Vertices - Normal-Sphere</string>
+   </property>
+  </action>
+  <action name="actionExport_Normal_Sphere_Data">
+   <property name="text">
+    <string>Export Normal-Sphere Data</string>
    </property>
   </action>
  </widget>
