- removed unused shaders - added the option to invert colormap for normal-sphere rendering - shared rotation with normal-sphere rendering now works with keyboard input

--- a/normalSphereSelection/NormalSphereSelectionDialog.ui
+++ b/normalSphereSelection/NormalSphereSelectionDialog.ui
@@ -30,6 +30,13 @@
       <widget class="QComboBox" name="colorMap_comboBox"/>
      </item>
      <item>
+      <widget class="QCheckBox" name="checkBox_invertColorMap">
+       <property name="text">
+        <string>Invert</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="Line" name="line">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
