- fixed small bug when exporting function-values. Now the suggested name should be correct with the path - fixed a bug, where the locale may not be reset to default when feature-vector import is cancelled - added feature-vector export

--- a/forms/mainWin.ui
+++ b/forms/mainWin.ui
@@ -126,6 +126,7 @@
     <addaction name="actionImportNormals"/>
     <addaction name="actionImportTexMap"/>
     <addaction name="separator"/>
+    <addaction name="actionExportFeatureVectors"/>
     <addaction name="actionExportFuncVals"/>
     <addaction name="separator"/>
     <addaction name="actionExportCoordinatesOfAllVerticesAsCSV"/>
@@ -4343,6 +4344,11 @@ p, li { white-space: pre-wrap; }
   <action name="actionFaces_Normal_Sphere">
    <property name="text">
     <string>Normal-Sphere - Faces</string>
+   </property>
+  </action>
+  <action name="actionExportFeatureVectors">
+   <property name="text">
+    <string>Export Feature Vectors (per Vertex)</string>
    </property>
   </action>
  </widget>
