--- a/forms/dialogRuler.ui
+++ b/forms/dialogRuler.ui
@@ -10,6 +10,24 @@
     <height>214</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>367</width>
+    <height>214</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>367</width>
+    <height>214</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Ruler</string>
   </property>
